--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.datasource.url = jdbc:postgresql://localhost:5433/postgres
-spring.datasource.username = postgres
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url = jdbc:postgresql://localhost:5433/postgres
+#spring.datasource.username = postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/springdb
+spring.datasource.username=valkaGetz
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.mapping-resources=META-INF/orm.xml
