typo in findBy fixed and functionality tested

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 #spring.datasource.username = postgres
 spring.datasource.url= jdbc:postgresql://localhost:5432/springdb
 spring.datasource.username=valkaGetz
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.mapping-resources=META-INF/orm.xml
