--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.github.TAASPlapp</groupId>
+      <artifactId>plapp-authorization-filter</artifactId>
+      <version>3ee3465cdc</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
