--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-#spring.datasource.url = jdbc:postgresql://localhost:5433/postgres
-#spring.datasource.username = postgres
-spring.datasource.url= jdbc:postgresql://localhost:5432/springdb
-spring.datasource.username=valkaGetz
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.mapping-resources=META-INF/orm.xml
